--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux-logger": "3.0.6",
     "reselect": "4.0.0",
     "redux-persist": "^6.0.0",
-    "react-stripe-checkout": "2.6.3"
+    "react-stripe-checkout": "2.6.3",
+    "grpc": "1.24.11"
   },
   "devDependencies": {
     "react-scripts": "3.0.0"
