--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.x"
+  },
   "dependencies": {
     "firebase": "6.0.2",
     "node-sass": "4.12.0",
