--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": "16.x",
-    "yarn": "1.x"
+    "npm": "8.x"
   },
   "dependencies": {
     "firebase": "6.0.2",
